<resources>
    <string name="app_name">Tusk List</string>
    <string name="action_settings">Settings</string>
    <string name="completed_taskview">Completed Tasks</string>

    <string name="login">Login</string>
    <string name="need_account">Need Account? Create One</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Create Account</string>
    <string name="already_have_account">Already Have Account? Login Here</string>

    <!-- Task Strings -->
    <string name="due_date">Due By: </string>

    <!-- Navigation Drawer Strings -->
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="nav_header">Tusk List</string>
    <string name="nav_item_1">Task List</string>
    <string name="nav_item_2">Completed Tasks</string>
    <string name="nav_item_4">Help</string>
    <string name="nav_item_5">Sign Out</string>

    <!-- TaskView Create Strings (Adding a new Task) -->
    <string name="task_header">Create New Task</string>
    <string name="task_title_hint">Task Title</string>
    <string name="task_description_hint">Task Description</string>
    <string name="priority_radio">Priority Level</string>
    <string name="priority_none">None</string>
    <string name="priority_low">Low</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_high">High</string>
    <string name="pick_time">Set Time of Completion</string>
    <string name="pick_date">Set Future Date</string>
    <string name="done_task">Done</string>
    <string name="cancel_task">Cancel</string>
    <string name="notifications_on">Notifications are enabled</string>
    <string name="notifications_off">Notifications are disabled</string>

    <!-- Settings Strings -->
    <string name="settings_header">Settings</string>
    <string name="default_priority">Default Priority:</string>
    <string name="enable_notifications">Enable Notifications?</string>
    <string name="enable">Enable</string>
    <string name="save_changes">Save</string>
    <string name="cancel_changes">Cancel</string>

    <!-- Completed TaskView Strings -->
    <string name="completed_tasks_header">Completed Tasks</string>
    <string name="completed_task_ratio">% of tasks completed</string>

    <!-- Help View Strings -->
    <string name="close">Close</string>
    <string name="created_by">Created by: Michael Rand, Patrick Kane, and Sarah Power</string>
    <string name="help_message">Welcome to Tusk List! This app is designed to help make your life a little easier by recording and prioritizing your daily tasks.</string>
    <string name="help">To create a new task, simple click on the blue button and fill out some information about the task. To delete a task, navigate into the edit pane and click the trash icon.\n\nThis app features dynamic creating, updating, and the deletion of tasks which syncs with an online portal. This app features notifications and persistent settings for the tasks, as well as can be sorted based on two criteria. There is also a completed tasks page which displays a daily calendar like list of all the given tasks and their status.</string>
    <string name="call_to_action_portal"><a href="https://todolist-72c5b.firebaseapp.com/">Online Portal</a></string>
    <string name="call_to_action_github"><a href="https://github.com/mrand13/ToDoList">Github</a></string>

</resources>
