<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_header"
        android:id="@+id/textView"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="20dp"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_priority"
        android:id="@+id/default_priority_text"
        android:layout_gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="70dp"
        android:padding="20dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:id="@+id/default_priority"
        android:padding="5dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_none"
            android:id="@+id/priority_none"
            android:padding="5dp"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_high"
            android:id="@+id/priority_high"
            android:padding="5dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_medium"
            android:id="@+id/priority_medium"
            android:padding="5dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_low"
            android:id="@+id/priority_low"
            android:padding="5dp" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_notifications"
        android:id="@+id/enable_notifications_text"
        android:padding="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable"
        android:id="@+id/enable_notifications"
        android:padding="10dp"
        android:checked="true"
        android:layout_marginLeft="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="70dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_changes"
            android:id="@+id/cancel_btn"
            android:clickable="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:id="@+id/save_btn"
            android:clickable="true" />
    </LinearLayout>

</LinearLayout>